# url-shortener

./: .gitignore  Cargo.toml
db/: 20220506143837_urls.sql
postman/: collection.json
src/: lib.rs  main.rs
