[package]
name = "url-reducer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rocket = "0.5.0-rc.3"
shuttle-service = { version = "0.2", features = ["sqlx-postgres", "web-rocket"] }
shuttle-runtime = "0.15.0"
shuttle-rocket = "0.15.0"
tokio = "1.28.0"
