[package]
name = "url-reducer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
shuttle-rocket = { version = "0.15.0" }
shuttle-runtime = { version = "0.15.0" }
serde = "1.0.148"
serde_json = "1.0.96"
shuttle-shared-db = { version = "0.15.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.26.0" }
url = "2.3.1"
